vijay, priyanka, sushmita | #976 | adding functional tests for reg call flow