@@ -95,6 +95,46 @@
                     <stopKey>secret</stopKey>
                     <stopPort>6669</stopPort>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>start-jetty</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <scanIntervalSeconds>0</scanIntervalSeconds>
+                            <daemon>true</daemon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-jetty</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <argLine>-XX:MaxPermSize=1024M</argLine>
+                            <includes>
+                                <include>**/ananyafunctional/**/*Test.java</include>
+                            </includes>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.github.searls</groupId>
@@ -109,14 +149,14 @@
                 </executions>
                 <configuration>
                     <jsSrcDir>
-                         ${project.basedir}/src/main/webapp/js
+                        ${project.basedir}/src/main/webapp/js
                     </jsSrcDir>
                     <specIncludes>
                         <include>**/*_mother.js</include>
                         <include>**/*_spec.js</include>
                     </specIncludes>
                     <jsTestSrcDir>
-                          ${project.basedir}/src/test/js
+                        ${project.basedir}/src/test/js
                     </jsTestSrcDir>
                 </configuration>
             </plugin>
@@ -156,7 +196,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
